fix mobile spacing

--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,7 @@
 body {
   padding: 0;
   min-height: 100vh;
-  display: grid;
+  display: block;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
   text-align: center;
@@ -16,15 +16,14 @@ body {
 .logo {
   grid-column: 2;
   grid-row: 1;
-  max-width: 100%;
+  object-fit: contain;
+  margin: 2rem 0;
   width: 85%;
-  margin-top: 2.5rem;
-  margin-bottom: 0;
-  margin-left: 0;
-  margin-right: 0;
+  max-width: 100%;
 }
 
 .lead {
+  margin: 1rem 0;
   grid-column: 2;
   grid-row: 2;
   color: white;
@@ -35,13 +34,12 @@ body {
   align-self: start;
   grid-column: 2;
   grid-row: 3;
-  margin: 0;
-  padding: 0;
-  display: grid;
+  margin: 0 5px;
+  padding: 0 10px;
+  display: flex;
   grid-template-columns: repeat(3, minmax(40px, 1fr));
   grid-template-rows: 50px;
-  justify-content: start;
-  grid-gap: 0 18vw;
+  justify-content: space-around;
 }
 
 .links li {
